@@ -1,3 +1,11 @@
+2009-12-28  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline:
+	2009-12-28  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR middle-end/41344
+	* omp-low.c (diagnose_sb_2): Handle GIMPLE_COND.
+
 2009-12-27  Martin Jambor  <mjambor@suse.cz>
 
 	PR tree-optimization/42231
